------------------------------------------------------------------------------
  pracma                                                                NEWS
------------------------------------------------------------------------------


CHANGES IN VERSION 1.8.4 (2015-06-25)

    o bernoulli() calculates the Bernoulli numbers and polynomials.

CHANGES IN VERSION 1.8.3 (2015-02-08)

    o Deleted some URLs that were not working properly anymore.

CHANGES IN VERSION 1.8.2 (2015-02-07)

    o Special functions gathered under topics 'specfun' resp. 'specmat'.

CHANGES IN VERSION 1.8.1 (2015-02-06)

    o sumalt() accelerating (infinite) alternating sums.
    o Option 'fast=FALSE' in circlefit() to avoid optim().
    o Added Gauss' AGM-based computation of pi to agmean(). 

CHANGES IN VERSION 1.8.0 (2015-01-26)

    o hurstexp() amended for vectors of uneven length.

CHANGES IN VERSION 1.7.9 (2014-11-15)

    o qpspecial() special quadratic programming solver.
    o Reintroduces the 'tol' keyword in fminbnd() for compatibility.

CHANGES IN VERSION 1.7.8 (2014-11-10)

    o bulirsch_stoer() Bulirsch-Stoer method for solving
      ordinary differential equations with high accuracy.
    o midpoint() implements the midpoint rule for solving ODEs
      combined with Richardson extrapolation for high accuracy.

CHANGES IN VERSION 1.7.7 (2014-11-01)

    o lufact() LU factorization with partial pivoting;
      lusys() solves linear systems through Gaussian elimination.

CHANGES IN VERSION 1.7.6 (2014-10-30)

    o ode23s() for stiff ordinary differential equations refining
      Rosenbrock's method (supply Jacobian if available).
    o euler_heun() Euler-Heun ODE solver has been corrected.

CHANGES IN VERSION 1.7.5 (2014-10-20)

    o fminbnd() much improved implementation of Brent's method;
      added challenging example by Trefethen to the help page.
    o lambertWn() for the second (real) branch of Lambert W.
    o Function name alias cintegral() removed.
