@@ -6,6 +6,7 @@
 CHANGES IN VERSION 1.8.4 (2015-06-25)
 
     o bernoulli() calculates the Bernoulli numbers and polynomials.
+    o factorial2() the product of all even resp. odd integers below n.
 
 CHANGES IN VERSION 1.8.3 (2015-02-08)
 
